--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">Saurav Kafle</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpeg" alt="">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -63,7 +63,7 @@
         <h1 class="mb-0">Saurav
           <span class="text-secondary">Kafle</span>
         </h1>
-        <h3 class="mb-0"><b>Principal Computer Vision Engineer @ AstraZeneca</b></h3>
+        <h3 class="mb-5"><b>Principal Computer Vision Engineer @ AstraZeneca</b></h3>
         <div class="mb-5"><b>Cambridge, United Kingdom</b>
           <a href="mailto:saurav.kafle@hotmail.com" class="lead text-info ">saurav.kafle@hotmail.com</a>
         </div>
