--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <a class="nav-link js-scroll-trigger" href="#about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#experience">Projects</a>
+          <a class="nav-link js-scroll-trigger" href="#experience">MSc Projects</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
