--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
         <h1 class="mb-0">Saurav
           <span class="text-secondary">Kafle</span>
         </h1>
-        <h3 class="mb-0"><b>Principal Computer Vision Engineer</b>
+        <h3 class="mb-0"><b>Associate Principal Computer Vision Engineer</b>
           <span class="text-secondary"><b>@ AstraZeneca</b><span>
         </h3>
         <div class="mb-5"><b>Cambridge, United Kingdom</b>
           <a href="mailto:saurav.kafle@hotmail.com" class="lead text-info ">✉saurav.kafle@hotmail.com</a>
         </div>
-        <p class="mb-5">Hello and Namaste! I am Saurav, Principal Computer Vision Engineer at AstraZeneca, the multi-national pharmaceutical company. I work within a wonderful team that creates vision software in the field of medicine.</p>
+        <p class="mb-5">Hello and Namaste! I am Saurav, a Computer Vision Engineer at AstraZeneca, the multi-national pharmaceutical company. I work within a wonderful team that creates vision software in the field of medicine.</p>
         <p class="mb-5">Before joining AstraZeneca, I worked as a computer vision software engineer at Seon Diagnostics Ltd, a medical diagnostics company where I created a computer vision software that utilised both the traditional and deep-learning based feature recognition and matching techniques to detect disease within medical images. Previous to that, I worked for VCA Technology Ltd, a video analytics company where I trained CNN architectures like FasterRCNN, EfficientNet, ShuffleNet, Detectron2, YOLOv5 and custom architectures using GPU rigs and large image datasets in MSCOCO, PascalVOC and YOLO formats. I am familiar with Nvidia's CUDA, CuDNN and TensorRT libraries that provide for one of the fastest tensor processing speeds for AI algorithms in both cloud and edge systems. Similarly, I spent a year working for Antobot Ltd, an agricultural robotics company where I utilised the state-of-the-art image segmentation model for recognizing and tracking objects in the video signal received from robot's camera. The model was trained on a custom COCO dataset and the detections per frame were post-processed to deliver an advanced tracking algorithm using image feature analysis techniques. The software I worked on and the stereo camera hardware delivered the vision module of the robot. Besides that, I also led the mobile app development as a Technical Director where I instructed an external agency to develop the mobile application that would act as the communication channel between the robot and the user.</p>
         <p class="mb-5">In 2019/20, I completed a postgraduate degree in AI and Big Data from Anglia Ruskin University. As part of my MSc thesis, I created an LSTM-based classifier to categorize natural language text into pre-defined categories. You can see some of my projects with their links in this website.</p>
         <p class="mb-5">Before my postgraduate degree, I spent a few years working for ZHC Systems Ltd., an accessibility software and hardware company, as a technical assistant where I contributed in the mobile app development and tested both hardware and software in production.</p>
